--- a/SitioWebCarrera/src/app/pages/proyectos/proyectos-page.component.html
+++ b/SitioWebCarrera/src/app/pages/proyectos/proyectos-page.component.html
@@ -214,9 +214,9 @@
         </p>
         <h6 class="fw-bold mt-4">Integrantes</h6>
         <ul>
-          <li>Ana Martínez</li>
-          <li>José Ramírez</li>
-          <li>Luisa Fernández</li>
+          <li>Ulises Diaz</li>
+          <li>Yahir Antonio</li>
+          <li>Fernando Gawalek</li>
         </ul>
         <h6 class="fw-bold mt-4">Galería</h6>
         <div class="row g-3">
@@ -224,10 +224,10 @@
             <img src="assets/img/proy1.jpg" class="img-fluid rounded">
           </div>
           <div class="col-md-4">
-            <img src="assets/img/proy1_2.jpg" class="img-fluid rounded">
+            <img src="assets/img/carrito1.jpg" class="img-fluid rounded">
           </div>
           <div class="col-md-4">
-            <img src="assets/img/proy1_3.jpg" class="img-fluid rounded">
+            <img src="assets/img/carrito2.jpg" class="img-fluid rounded">
           </div>
         </div>
         <h6 class="fw-bold mt-4">Video</h6>
@@ -269,17 +269,8 @@
           <div class="col-md-4">
             <img src="assets/img/proy2.jpeg" class="img-fluid rounded">
           </div>
-          <div class="col-md-4">
-            <img src="assets/img/proy2_2.jpg" class="img-fluid rounded">
-          </div>
-          <div class="col-md-4">
-            <img src="assets/img/proy2_3.jpg" class="img-fluid rounded">
-          </div>
         </div>
-        <h6 class="fw-bold mt-4">Video</h6>
-        <div class="ratio ratio-16x9">
-          <iframe src="https://www.youtube.com/embed/VIDEO_ID_2" allowfullscreen></iframe>
-        </div>
+
       </div>
       <div class="modal-footer">
         <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -313,17 +304,8 @@
           <div class="col-md-4">
             <img src="assets/img/sensor.jpg" class="img-fluid rounded">
           </div>
-          <div class="col-md-4">
-            <img src="assets/img/sensor_2.jpg" class="img-fluid rounded">
-          </div>
-          <div class="col-md-4">
-            <img src="assets/img/sensor_3.jpg" class="img-fluid rounded">
-          </div>
         </div>
-        <h6 class="fw-bold mt-4">Video</h6>
-        <div class="ratio ratio-16x9">
-          <iframe src="https://www.youtube.com/embed/VIDEO_ID_3" allowfullscreen></iframe>
-        </div>
+
       </div>
       <div class="modal-footer">
         <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -357,16 +339,6 @@
           <div class="col-md-4">
             <img src="assets/img/proy4.png" class="img-fluid rounded">
           </div>
-          <div class="col-md-4">
-            <img src="assets/img/proy4_2.jpg" class="img-fluid rounded">
-          </div>
-          <div class="col-md-4">
-            <img src="assets/img/proy4_3.jpg" class="img-fluid rounded">
-          </div>
-        </div>
-        <h6 class="fw-bold mt-4">Video</h6>
-        <div class="ratio ratio-16x9">
-          <iframe src="https://www.youtube.com/embed/VIDEO_ID_4" allowfullscreen></iframe>
         </div>
       </div>
       <div class="modal-footer">
